@@ -24,6 +24,7 @@ Tom Culliton			suggestions
 Walter Doerwald			bug reports and fixes
 Jeff Epler			bug reports
 Mark Favas			bug reports
+Erik Max Francis		bug reports and suggestions
 Dan Fandrich			bug reports
 Alexandre Fayolle		bug reports
 Horst Gassner			bug reports and suggestions
