@@ -1,6 +1,7 @@
 
 Version 0.8.8   - xx January 2002
   * Fix spurious warnings for integer division from:  (x + 100.0) / 10
+  * Fix spurious warnings for implicit returns when raise in except: clause
 
 Version 0.8.7   - 05 January 2002
   * Add -2/--constcond option to warn if using a constant 
